; ModuleID = '/home/carl/AnghaBench/php-src/Zend/extr_zend_compile.c_zend_emit_assign_ref_znode.c'
source_filename = "/home/carl/AnghaBench/php-src/Zend/extr_zend_compile.c_zend_emit_assign_ref_znode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ZEND_AST_ASSIGN_REF = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*)* @zend_emit_assign_ref_znode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @zend_emit_assign_ref_znode(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load i32, i32* @ZEND_AST_ASSIGN_REF, align 4
  %7 = load i32*, i32** %3, align 8
  %8 = load i32*, i32** %4, align 8
  %9 = call i32 @zend_ast_create_znode(i32* %8)
  %10 = call i32* @zend_ast_create(i32 %6, i32* %7, i32 %9)
  store i32* %10, i32** %5, align 8
  %11 = load i32*, i32** %5, align 8
  %12 = call i32 @zend_compile_assign_ref(i32* null, i32* %11)
  ret void
}

declare dso_local i32* @zend_ast_create(i32, i32*, i32) #1

declare dso_local i32 @zend_ast_create_znode(i32*) #1

declare dso_local i32 @zend_compile_assign_ref(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
